// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialog layouts Should close when in not persistent and not loading state 1`] = `
<div
  class="dialog-layout"
>
  <div>
    <p>
      foo
    </p>
  </div>
</div>
`;

exports[`dialog layouts Should work with layout 1`] = `
<div
  class="dialog-layout"
>
  <div>
    <p>
      foo
    </p>
  </div>
</div>
`;

exports[`dialog layouts Should work with layout with component property 1`] = `
<div>
  <div>
    <p>
      foo
    </p>
  </div>
</div>
`;
